--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'  // Hibernate 6.0.2 이상
     implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0' // Swagger UI
 
     //queryDSL
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
